--- a/lib/index.css
+++ b/lib/index.css
@@ -98,7 +98,7 @@
   color: transparent;
 }
 
-.bl-app-input.error {
+.bl-app-input.bl-error {
   @apply bl-border-red-500;
 }
 input[type="number"]::-webkit-inner-spin-button,
