--- a/lib/index.css
+++ b/lib/index.css
@@ -14,7 +14,7 @@
 }
 
 .bl-table {
-  @apply bl-bg-white dark:bl-bg-neutral-950 bl-py-4 bl-z-0 bl-flex bl-flex-col bl-relative bl-justify-between bl-gap-4 bl-overflow-auto bl-rounded-2xl bl-shadow bl-w-full;
+  @apply bl-py-4 bl-z-0 bl-flex bl-flex-col bl-relative bl-justify-between bl-gap-4 bl-overflow-auto   bl-w-full;
 }
 .bl-table table {
   @apply bl-w-full bl-text-neutral-800 dark:bl-text-neutral-500;
@@ -94,7 +94,7 @@
 }
 
 .bl-app-input {
-  @apply bl-pb-1 bl-pt-4 bl-px-5 bl-border-neutral-200  bl-outline-none  bl-rounded-xl bl-border bl-w-full bl-text-gray-700 bl-font-medium bl-appearance-none	 focus:bl-bg-gray-100 dark:focus:bl-bg-black bl-bg-neutral-200 hover:bl-bg-neutral-300 hover:bl-border-neutral-300 bl-transition bl-duration-100 dark:bl-border-neutral-950 dark:bl-text-neutral-200 dark:bl-bg-white/5 dark:hover:bl-bg-black dark:hover:bl-border-black bl-placeholder-neutral-200;
+  @apply bl-pb-1 bl-pt-4 bl-px-5 bl-border-neutral-200  bl-outline-none  bl-rounded-lg bl-border bl-w-full bl-text-gray-700 bl-font-medium bl-appearance-none	 focus:bl-bg-gray-100 dark:focus:bl-bg-black bl-bg-white hover:bl-bg-neutral-300 dark:focus:bl-border-neutral-200 bl-transition bl-duration-100 dark:bl-border-neutral-800 dark:bl-text-neutral-200 dark:bl-bg-transparent dark:hover:bl-bg-black bl-placeholder-neutral-200;
 }
 .bl-app-input:disabled {
   @apply bl-bg-neutral-200 bl-text-neutral-400 bl-border-neutral-200 dark:bl-border-black dark:bl-bg-black dark:bl-text-neutral-700;
