--- a/lib/index.css
+++ b/lib/index.css
@@ -15,10 +15,10 @@
   @apply bl-w-full bl-text-neutral-800 dark:bl-text-neutral-500;
 }
 .bl-table table thead tr th {
-  @apply bl-px-3 bl-text-xs bl-text-neutral-500 bl-bg-neutral-200 dark:bl-bg-neutral-900 dark:bl-text-neutral-300 bl-uppercase bl-h-8;
+  @apply bl-px-3 bl-text-xs bl-text-neutral-500 dark:bl-text-neutral-300 bl-uppercase bl-h-8 bl-select-none;
 }
 .bl-table table tr {
-  @apply dark:hover:bl-text-neutral-300 bl-select-none;
+  @apply dark:hover:bl-text-neutral-300;
 }
 .bl-table table thead tr th:first-child {
   @apply bl-rounded-l-xl;
@@ -208,7 +208,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /* Blocks */
 
-.bl-block {
+.bl-block-box {
   @apply bl-h-full bl-w-full  bl-relative  bl-overflow-y-hidden bl-min-h-20 bl-rounded-2xl bl-pt-0;
 }
 
@@ -220,6 +220,9 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .bl-block-response {
   @apply bl-h-full bl-overflow-y-auto bl-p-5 bl-w-full;
+}
+.bl-block-response.bl-response-table {
+  @apply dark:bl-bg-neutral-950;
 }
 
 .bl-block-form {
