--- a/lib/index.css
+++ b/lib/index.css
@@ -16,7 +16,7 @@
 }
 
 .bl-table table thead tr th {
-  @apply bl-sticky bl-top-2 dark:bl-bg-neutral-950  bl-px-3 bl-text-xs bl-text-neutral-500 dark:bl-text-neutral-300 bl-uppercase bl-h-8 bl-select-none;
+  @apply bl-sticky bl-top-0 bl-bg-neutral-100 dark:bl-bg-neutral-950  bl-px-3 bl-text-xs bl-text-neutral-500 dark:bl-text-neutral-300 bl-uppercase bl-h-8 bl-select-none;
 }
 .bl-table table tr {
   @apply dark:hover:bl-text-neutral-300;
@@ -60,7 +60,7 @@
 }
 
 .bl-table-footer {
-  @apply bl-flex bl-justify-between bl-items-center bl-select-none;
+  @apply bl-flex bl-justify-between bl-items-center bl-select-none dark:bl-text-neutral-200 bl-text-neutral-600 bl-pb-3;
 }
 .bl-table-page {
   @apply bl-flex bl-ml-auto bl-gap-2 bl-items-center bl-text-sm;
@@ -152,7 +152,7 @@ input[type="number"]::-webkit-outer-spin-button {
   @apply bl-fill-neutral-800 dark:bl-fill-neutral-100 bl-w-full bl-h-full;
 }
 .bl-table-no-results {
-  @apply bl-text-center bl-py-10 bl-text-2xl bl-text-neutral-700 bl-px-10;
+  @apply bl-py-10 bl-text-2xl bl-text-neutral-700 bl-px-10 bl-flex bl-justify-center bl-w-full bl-h-full bl-items-center;
 }
 
 /* Loader */
@@ -218,7 +218,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .bl-block-loader {
-  @apply bl-absolute bl-top-0 bl-left-0 bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm;
+  @apply bl-absolute bl-top-0 bl-left-0 bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm bl-min-w-20;
 }
 
 .bl-block-response {
@@ -254,10 +254,10 @@ input[type="number"]::-webkit-outer-spin-button {
   @apply bl-border-black bl-bg-black dark:bl-text-black dark:bl-bg-white dark:hover:bl-bg-neutral-200 hover:bl-bg-black bl-text-white;
 }
 .bl-btn-secondary {
-  @apply bl-text-blue-900  bl-border-transparent bl-border-2 bl-bg-blue-400 dark:bl-text-blue-300 dark:bl-bg-blue-950/70 dark:hover:bl-bg-blue-900;
+  @apply bl-text-neutral-900  bl-border-neutral-200 dark:bl-border-transparent bl-border-2 bl-bg-neutral-100 dark:bl-text-neutral-300 dark:bl-bg-neutral-950/70 dark:hover:bl-bg-neutral-900;
 }
 .bl-btn-third {
-  @apply bl-text-neutral-900  bl-border-transparent bl-border-2 bl-bg-neutral-400 dark:bl-text-neutral-300 dark:bl-bg-neutral-800 dark:hover:bl-bg-neutral-700;
+  @apply bl-text-neutral-900 bl-border-transparent bl-border-2 bl-bg-neutral-400 dark:bl-text-neutral-300 dark:bl-bg-neutral-800 dark:hover:bl-bg-neutral-700;
 }
 .bl-btn-neutral {
   @apply bl-text-gray-500 bl-bg-neutral-200 hover:bl-bg-neutral-300 bl-border-transparent;
