remove duplicate tailwind, Table

--- a/lib/index.css
+++ b/lib/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /* Table  */
 
 .bl-table {
@@ -210,7 +206,7 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Blocks */
 
 .bl-block-box {
-  @apply bl-h-full bl-w-full  bl-relative bl-min-h-20 bl-rounded-2xl bl-pt-0;
+  @apply bl-h-full bl-w-full  bl-relative bl-min-h-20 bl-rounded-2xl bl-pt-0 bl-min-w-20;
 }
 
 .bl-exception {
@@ -218,14 +214,14 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .bl-block-loader {
-  @apply bl-absolute bl-top-0 bl-left-0 bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm bl-min-w-20;
+  @apply bl-absolute bl-top-0 bl-left-0 bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm bl-rounded-2xl;
 }
 
 .bl-block-response {
   @apply bl-h-full bl-p-5 bl-w-full;
 }
 .bl-block-response.bl-response-table {
-  @apply dark:bl-bg-neutral-950;
+  @apply dark:bl-bg-neutral-950 bl-bg-neutral-100;
 }
 
 .bl-block-form {
