--- a/lib/index.css
+++ b/lib/index.css
@@ -232,7 +232,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .bl-block-form {
-  @apply bl-py-6 lg:bl-max-w-96 lg:bl-min-w-96 bl-min-w-[90%] bl-bg-white bl-border-neutral-300 dark:bl-border-white/10 bl-border dark:bl-bg-neutral-900 bl-rounded-xl bl-px-5 bl-pb-5 bl-pt-5;
+  @apply bl-py-6 lg:bl-max-w-96 lg:bl-min-w-96 bl-min-w-[90%] bl-bg-white bl-border-neutral-300 dark:bl-border-white/10 bl-border dark:bl-bg-neutral-900 bl-rounded-xl bl-px-5 bl-pb-5 bl-pt-5 bl-mx-auto;
 }
 .bl-block-form-title {
   @apply bl-text-sm md:bl-text-base bl-font-medium bl-text-neutral-600 dark:bl-text-neutral-300;
