--- a/lib/index.css
+++ b/lib/index.css
@@ -4,169 +4,169 @@
 
 /* Table  */
 
-.bl-table {
-  @apply bl-z-0 bl-relative bl-justify-between bl-overflow-auto bl-w-full bl-overflow-x-scroll  bl-mb-2 bl-bg-neutral-50;
+.table {
+  @apply z-0 relative justify-between overflow-auto w-full overflow-x-scroll  mb-2 bg-neutral-50;
 }
-.bl-table table {
-  @apply bl-w-full bl-text-neutral-800 dark:bl-text-neutral-500;
+.table table {
+  @apply w-full text-neutral-800 dark:text-neutral-500;
 }
-.bl-table-header {
-  @apply bl-mb-5 bl-justify-end bl-flex bl-items-center bl-gap-3;
-}
-
-.bl-table table thead tr th {
-  @apply bl-sticky bl-top-0 bl-bg-neutral-100 dark:bl-bg-neutral-950  bl-px-3 bl-text-xs bl-text-neutral-500 dark:bl-text-neutral-300 bl-uppercase bl-h-8 bl-select-none;
-}
-.bl-table table tr {
-  @apply dark:hover:bl-text-neutral-300;
-}
-.bl-table table thead tr th:first-child {
-  @apply bl-rounded-l-xl;
-}
-.bl-table table thead tr th:last-child {
-  @apply bl-rounded-r-xl;
+.table-header {
+  @apply mb-5 justify-end flex items-center gap-3;
 }
 
-.bl-table table tbody {
-  @apply bl-divide-y dark:bl-divide-neutral-800;
+.table table thead tr th {
+  @apply sticky top-0 bg-neutral-100 dark:bg-neutral-950  px-3 text-xs text-neutral-500 dark:text-neutral-300 uppercase h-8 select-none;
 }
-.bl-table table tbody tr td {
-  @apply bl-p-3 bl-text-sm;
+.table table tr {
+  @apply dark:hover:text-neutral-300;
 }
-
-.bl-table table tbody tr:first-child {
-  @apply bl-rounded-t-xl;
+.table table thead tr th:first-child {
+  @apply rounded-l-xl;
 }
-.bl-table table tbody tr:last-child {
-  @apply bl-rounded-b-xl;
-}
-
-.bl-table-show-all {
-  @apply bl-underline bl-font-bold bl-text-neutral-600 bl-text-xs bl-cursor-pointer;
+.table table thead tr th:last-child {
+  @apply rounded-r-xl;
 }
 
-.bl-table table tbody tr td,
-.bl-table table tbody tr th {
-  @apply bl-font-light;
+.table table tbody {
+  @apply divide-y dark:divide-neutral-800;
+}
+.table table tbody tr td {
+  @apply p-3 text-sm;
 }
 
-.bl-table table tbody tr td a {
-  @apply bl-text-sky-600;
+.table table tbody tr:first-child {
+  @apply rounded-t-xl;
+}
+.table table tbody tr:last-child {
+  @apply rounded-b-xl;
 }
 
-.bl-table table tbody button {
-  @apply bl-bg-neutral-200 hover:bl-bg-neutral-300 bl-text-neutral-600 bl-py-1 bl-px-3 bl-text-sm bl-rounded-lg dark:bl-bg-neutral-800 dark:hover:bl-bg-neutral-700 dark:bl-text-neutral-200;
+.table-show-all {
+  @apply underline font-bold text-neutral-600 text-xs cursor-pointer;
 }
 
-.bl-table-footer {
-  @apply bl-flex bl-justify-between bl-items-center bl-select-none dark:bl-text-neutral-200 bl-text-neutral-600 bl-pb-3;
+.table table tbody tr td,
+.table table tbody tr th {
+  @apply font-light;
 }
-.bl-table-page {
-  @apply bl-flex bl-ml-auto bl-gap-2 bl-items-center bl-text-sm;
+
+.table table tbody tr td a {
+  @apply text-sky-600;
 }
-.bl-table-th-icon {
-  @apply bl-h-4 bl-w-4 dark:bl-fill-neutral-200 bl-fill-neutral-900;
+
+.table table tbody button {
+  @apply bg-neutral-200 hover:bg-neutral-300 text-neutral-600 py-1 px-3 text-sm rounded-lg dark:bg-neutral-800 dark:hover:bg-neutral-700 dark:text-neutral-200;
 }
-.bl-table-th {
-  @apply bl-flex bl-items-center bl-gap-2;
+
+.table-footer {
+  @apply flex justify-between items-center select-none dark:text-neutral-200 text-neutral-600 pb-3;
+}
+.table-page {
+  @apply flex ml-auto gap-2 items-center text-sm;
+}
+.table-th-icon {
+  @apply h-4 w-4 dark:fill-neutral-200 fill-neutral-900;
+}
+.table-th {
+  @apply flex items-center gap-2;
 }
 
 /* Modal */
-.bl-modalx-enter {
+.modalx-enter {
   opacity: 0;
   transform: scale(0.9);
 }
-.bl-modalx-enter-active {
+.modalx-enter-active {
   opacity: 1;
   transform: translateX(0);
   transition: opacity 300ms, transform 300ms;
 }
-.bl-modalx-exit {
+.modalx-exit {
   opacity: 1;
 }
-.bl-modalx-exit-active {
+.modalx-exit-active {
   opacity: 0;
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
 }
 
-.bl-modal-back-enter {
+.modal-back-enter {
   opacity: 0;
 }
-.bl-modal-back-enter-active {
+.modal-back-enter-active {
   opacity: 1;
   transform: translateX(0);
   transition: opacity 300ms, transform 300ms;
 }
-.bl-modal-back-exit {
+.modal-back-exit {
   opacity: 1;
 }
-.bl-modal-back-exit-active {
+.modal-back-exit-active {
   opacity: 0;
   transition: opacity 300ms, transform 300ms;
 }
 
 /* Input */
-.bl-app-input {
-  @apply bl-pb-1 bl-pt-4 bl-px-5 bl-border-neutral-200  bl-outline-none  bl-rounded-lg bl-border bl-w-full bl-text-gray-700 bl-font-medium bl-appearance-none	 focus:bl-bg-gray-100 dark:focus:bl-bg-black bl-bg-white hover:bl-bg-neutral-300 dark:focus:bl-border-neutral-200 bl-transition bl-duration-100 dark:bl-border-neutral-800 dark:bl-text-neutral-200 dark:bl-bg-transparent dark:hover:bl-bg-black bl-placeholder-neutral-200;
+.app-input {
+  @apply pb-1 pt-4 px-5 border-neutral-200  outline-none  rounded-lg border w-full text-gray-700 font-medium appearance-none	 focus:bg-gray-100 dark:focus:bg-black bg-white hover:bg-neutral-300 dark:focus:border-neutral-200 transition duration-100 dark:border-neutral-800 dark:text-neutral-200 dark:bg-transparent dark:hover:bg-black placeholder-neutral-200;
 }
-.bl-app-input:disabled {
-  @apply bl-bg-neutral-200 bl-text-neutral-400 bl-border-neutral-200 dark:bl-border-black dark:bl-bg-black dark:bl-text-neutral-700;
+.app-input:disabled {
+  @apply bg-neutral-200 text-neutral-400 border-neutral-200 dark:border-black dark:bg-black dark:text-neutral-700;
 }
-.bl-app-input::-webkit-input-placeholder,
-.bl-app-input::placeholder {
-  @apply bl-text-transparent;
+.app-input::-webkit-input-placeholder,
+.app-input::placeholder {
+  @apply text-transparent;
 }
-.bl-app-input::-webkit-calendar-picker-indicator {
-  @apply dark:bl-invert;
+.app-input::-webkit-calendar-picker-indicator {
+  @apply dark:invert;
 }
 
-.bl-app-input.bl-error {
-  @apply bl-border-red-500;
+.app-input.error {
+  @apply border-red-500;
 }
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.bl-input-error {
-  @apply bl-text-left bl-text-red-500 bl-text-sm;
+.input-error {
+  @apply text-left text-red-500 text-sm;
 }
 /* Icon Button */
 
-.bl-icon-btn {
-  @apply bl-fill-white dark:bl-fill-black;
+.icon-btn {
+  @apply fill-white dark:fill-black;
 }
-.bl-icon-btn.secondary {
-  @apply bl-fill-neutral-600;
-}
-
-.bl-back-button,
-.bl-action-button {
-  @apply bl-size-8 bl-p-1 bl-cursor-pointer bl-border-2 bl-border-neutral-100 hover:bl-border-neutral-300 bl-rounded-full bl-bg-white bl-shrink-0 dark:bl-border-black dark:bl-bg-black;
+.icon-btn.secondary {
+  @apply fill-neutral-600;
 }
 
-.bl-back-button .bl-icon,
-.bl-action-button .bl-icon {
-  @apply bl-fill-neutral-800 dark:bl-fill-neutral-100 bl-w-full bl-h-full;
+.back-button,
+.action-button {
+  @apply size-8 p-1 cursor-pointer border-2 border-neutral-100 hover:border-neutral-300 rounded-full bg-white shrink-0 dark:border-black dark:bg-black;
 }
-.bl-table-no-results {
-  @apply bl-py-10 bl-text-2xl bl-text-neutral-700 bl-px-10 bl-flex bl-justify-center bl-w-full bl-h-full bl-items-center;
+
+.back-button .icon,
+.action-button .icon {
+  @apply fill-neutral-800 dark:fill-neutral-100 w-full h-full;
 }
-.bl-table-title {
-  @apply bl-text-neutral-800 dark:bl-text-neutral-200;
+.table-no-results {
+  @apply py-10 text-2xl text-neutral-700 px-10 flex justify-center w-full h-full items-center;
+}
+.table-title {
+  @apply text-neutral-800 dark:text-neutral-200;
 }
 
 /* Loader */
 
-.bl-lds-ring {
+.lds-ring {
   display: flex;
   position: relative;
   width: 64px;
   height: 64px;
 }
 
-.bl-lds-ring div {
+.lds-ring div {
   --defaultColor: #a8a29e;
   box-sizing: border-box;
   display: block;
@@ -176,32 +176,32 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 6px;
   border: 6px solid #a8a29e;
   border-radius: 50%;
-  animation: bl-lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: var(--defaultColor) transparent transparent transparent;
 }
-.bl-lds-ring div:nth-child(1) {
+.lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
 }
-.bl-lds-ring div:nth-child(2) {
+.lds-ring div:nth-child(2) {
   animation-delay: -0.3s;
 }
-.bl-lds-ring div:nth-child(3) {
+.lds-ring div:nth-child(3) {
   animation-delay: -0.15s;
 }
 
-.bl-lds-ring.sm {
+.lds-ring.sm {
   width: 1rem;
   height: 1rem;
 }
 
-.bl-lds-ring.sm div {
+.lds-ring.sm div {
   margin: 0;
   width: 0.8rem;
   height: 0.8rem;
   border-width: 0.2rem;
 }
 
-@keyframes bl-lds-ring {
+@keyframes lds-ring {
   0% {
     transform: rotate(0deg);
   }
@@ -212,102 +212,102 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /* Blocks */
 
-.bl-block-box {
-  @apply bl-h-full bl-w-full  bl-relative bl-min-h-20 bl-rounded-2xl bl-pt-0 bl-min-w-20;
+.block-box {
+  @apply h-full w-full  relative min-h-20 rounded-2xl pt-0 min-w-20;
 }
 
-.bl-exception {
-  @apply bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm bl-min-h-32 bl-text-center bl-text-neutral-600 bl-text-lg;
+.exception {
+  @apply w-full h-full flex justify-center items-center z-10 bg-white/50 dark:bg-black/50 backdrop-blur-sm min-h-32 text-center text-neutral-600 text-lg;
 }
 
-.bl-block-loader {
-  @apply bl-absolute bl-top-0 bl-left-0 bl-w-full bl-h-full bl-flex bl-justify-center bl-items-center bl-z-10 bl-bg-white/50 dark:bl-bg-black/50 bl-backdrop-blur-sm bl-rounded-2xl;
+.block-loader {
+  @apply absolute top-0 left-0 w-full h-full flex justify-center items-center z-10 bg-white/50 dark:bg-black/50 backdrop-blur-sm rounded-2xl;
 }
 
-.bl-block-response {
-  @apply bl-h-full bl-p-5 bl-w-full;
+.block-response {
+  @apply h-full p-5 w-full;
 }
-.bl-block-response.bl-response-table {
-  @apply dark:bl-bg-neutral-950 bl-bg-neutral-100;
-}
-
-.bl-block-form {
-  @apply bl-py-6 lg:bl-max-w-96 lg:bl-min-w-96 bl-min-w-[90%] bl-bg-white bl-border-neutral-300 dark:bl-border-white/10 bl-border dark:bl-bg-neutral-900 bl-rounded-xl bl-px-5 bl-pb-5 bl-pt-5 bl-mx-auto;
-}
-.bl-block-form-title {
-  @apply bl-text-sm md:bl-text-base bl-font-medium bl-text-neutral-600 dark:bl-text-neutral-300;
-}
-.bl-block-form-header {
-  @apply bl-flex bl-items-center bl-gap-3;
-}
-.bl-block-form-footer {
-  @apply bl-mt-5 md:bl-mt-5 bl-border-t-2  bl-border-gray-200 dark:bl-border-neutral-800 bl-pt-3 bl-text-center bl-flex bl-gap-3 md:bl-gap-5  bl-justify-end;
+.block-response.response-table {
+  @apply dark:bg-neutral-950 bg-neutral-100;
 }
 
-.bl-block-form-fields {
-  @apply bl-grid bl-grid-cols-2 bl-w-full bl-gap-3 bl-mt-5;
+.block-form {
+  @apply py-6 lg:max-w-96 lg:min-w-96 min-w-[90%] bg-white border-neutral-300 dark:border-white/10 border dark:bg-neutral-900 rounded-xl px-5 pb-5 pt-5 mx-auto;
+}
+.block-form-title {
+  @apply text-sm md:text-base font-medium text-neutral-600 dark:text-neutral-300;
+}
+.block-form-header {
+  @apply flex items-center gap-3;
+}
+.block-form-footer {
+  @apply mt-5 md:mt-5 border-t-2  border-gray-200 dark:border-neutral-800 pt-3 text-center flex gap-3 md:gap-5  justify-end;
+}
+
+.block-form-fields {
+  @apply grid grid-cols-2 w-full gap-3 mt-5;
 }
 
 /* Design System */
 
-.bl-btn {
-  @apply bl-appearance-none bl-border-2 bl-rounded-lg bl-inline-block focus:bl-outline-none bl-shadow-sm;
+.btn {
+  @apply appearance-none border-2 rounded-lg inline-block focus:outline-none shadow-sm;
 }
-.bl-btn-primary {
-  @apply bl-border-black bl-bg-black dark:bl-text-black dark:bl-bg-white dark:hover:bl-bg-neutral-200 hover:bl-bg-black bl-text-white;
+.btn-primary {
+  @apply border-black bg-black dark:text-black dark:bg-white dark:hover:bg-neutral-200 hover:bg-black text-white;
 }
-.bl-btn-secondary {
-  @apply bl-text-neutral-900  bl-border-neutral-200 dark:bl-border-transparent bl-border-2 bl-bg-neutral-100 dark:bl-text-neutral-300 dark:bl-bg-neutral-950/70 dark:hover:bl-bg-neutral-900;
+.btn-secondary {
+  @apply text-neutral-900  border-neutral-200 dark:border-transparent border-2 bg-neutral-100 dark:text-neutral-300 dark:bg-neutral-950/70 dark:hover:bg-neutral-900;
 }
-.bl-btn-third {
-  @apply bl-text-neutral-900 bl-border-transparent bl-border-2 bl-bg-neutral-400 dark:bl-text-neutral-300 dark:bl-bg-neutral-800 dark:hover:bl-bg-neutral-700;
+.btn-third {
+  @apply text-neutral-900 border-transparent border-2 bg-neutral-400 dark:text-neutral-300 dark:bg-neutral-800 dark:hover:bg-neutral-700;
 }
-.bl-btn-neutral {
-  @apply bl-text-gray-500 bl-bg-neutral-200 hover:bl-bg-neutral-300 bl-border-transparent;
+.btn-neutral {
+  @apply text-gray-500 bg-neutral-200 hover:bg-neutral-300 border-transparent;
 }
-.bl-btn-disabled {
-  @apply bl-bg-neutral-100 bl-border-neutral-100 dark:bl-bg-neutral-700 dark:bl-border-neutral-700 dark:bl-text-neutral-400 bl-text-gray-500 bl-cursor-not-allowed;
+.btn-disabled {
+  @apply bg-neutral-100 border-neutral-100 dark:bg-neutral-700 dark:border-neutral-700 dark:text-neutral-400 text-gray-500 cursor-not-allowed;
 }
-.bl-size-lg {
-  @apply bl-py-3 bl-px-5 bl-text-sm;
+.size-lg {
+  @apply py-3 px-5 text-sm;
 }
-.bl-size-md {
-  @apply bl-py-1.5 bl-px-2 bl-text-sm;
+.size-md {
+  @apply py-1.5 px-2 text-sm;
 }
-.bl-size-sm {
-  @apply bl-py-1.5 bl-px-2 bl-text-xs md:bl-text-sm;
+.size-sm {
+  @apply py-1.5 px-2 text-xs md:text-sm;
 }
-.bl-size-xs {
-  @apply bl-py-1 bl-px-3 bl-text-xs;
+.size-xs {
+  @apply py-1 px-3 text-xs;
 }
 
 /* BL Messages  */
-.bl-message {
-  @apply bl-text-white bl-px-3 bl-py-1  bl-rounded-lg bl-flex bl-items-center bl-gap-1 bl-select-none;
+.message {
+  @apply text-white px-3 py-1  rounded-lg flex items-center gap-1 select-none;
 }
-.bl-message-error {
-  @apply bl-bg-red-600;
+.message-error {
+  @apply bg-red-600;
 }
-.bl-message-warning {
-  @apply bl-bg-yellow-600;
+.message-warning {
+  @apply bg-yellow-600;
 }
-.bl-message-info {
-  @apply bl-bg-blue-600;
+.message-info {
+  @apply bg-blue-600;
 }
 
 /* BL Values  */
-.bl-values {
-  @apply bl-text-neutral-400 dark:bl-text-neutral-400;
+.values {
+  @apply text-neutral-400 dark:text-neutral-400;
 }
-.bl-values-title {
-  @apply bl-text-sm bl-font-light bl-pb-3 bl-mb-3 bl-border-b bl-border-neutral-200;
+.values-title {
+  @apply text-sm font-light pb-3 mb-3 border-b border-neutral-200;
 }
-.bl-values-container {
-  @apply bl-flex bl-flex-wrap bl-items-center bl-gap-3 lg:bl-gap-10 bl-justify-center;
+.values-container {
+  @apply flex flex-wrap items-center gap-3 lg:gap-10 justify-center;
 }
-.bl-values-value {
-  @apply bl-text-3xl bl-font-bold bl-text-black dark:bl-text-white;
+.values-value {
+  @apply text-3xl font-bold text-black dark:text-white;
 }
-.bl-values-label {
-  @apply bl-font-light bl-text-sm;
+.values-label {
+  @apply font-light text-sm;
 }
